# BaslerDriver

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  calibration.xml
includes/: Detectors.hpp  GeniIDS.hpp  GeniPylon.hpp  GeniWrap.hpp
src/: Detectors.cpp  GeniPylon.hpp  GeniWrap.cpp  GeniWrap.hpp  main.cpp
